...
            "state": "translated",
            "value": "Ativar notificações"
          }
        }
      }
    },
    "Ative as notificações": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Ative as notificações"
          }
...
            "state": "translated",
            "value": "Confirmada: o turno está em Meus turnos"
          }
        }
      }
    },
    "Confirmação de quem vai trabalhar": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Confirmação de quem vai trabalhar"
          }
...
            "state": "translated",
            "value": "Vaga de %@"
          }
        }
      }
    },
    "Vaga nova na sua função e na sua região": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Vaga nova na sua função e na sua região"
          }
...
            "state": "translated",
            "value": "Vagas"
          }
        }
      }
    },
    "Vagas no DF": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Vagas no DF"
          }
...
